# checkpoint-engine

./: README.md  pyproject.toml
checkpoint_engine/: device_utils.py  ps.py  worker.py
docs/: npu_start.md
examples/: update.py
tests/: test_update.py
